--- a/styles/styles.css
+++ b/styles/styles.css
@@ -29,7 +29,6 @@ li a:hover {
     background-color: #3dbfff;
     color: #bebebe;
 }
-
 #controls {
     position: fixed;
     left: 0;
@@ -39,13 +38,15 @@ li a:hover {
     height: 100%;
     width: 200px;
 }
-#board {
+#right {
     left: 210px;
-    top: 150px;
     position: fixed;
     width: calc(100% - 215px);
     height: 100%;
     text-align: center;
+}
+#board {
+    margin-top: 25px;
 }
 #heading {
     left: 210px;
